--- a/views/admin/activities/view.ejs
+++ b/views/admin/activities/view.ejs
@@ -1,5 +1,5 @@
 <div class="col-md-12" style="margin-bottom:20px;">    
-    <h2>Action Code View
+    <h2>Activity View
     </h2>
 
     <% if(activity) { %>
@@ -14,11 +14,11 @@
           </div>
 
           <div class="ar-cname ar-info-line">
-            User: <strong style="text-transform: capitalize;"><%= activity.user %>%</strong>
+            User: <strong style="text-transform: capitalize;"><%= activity.user %></strong>
           </div>
 
           <div class="ar-cname ar-info-line">
-            URL: <strong style="text-transform: capitalize;"><%= activity.uri %>%</strong>
+            URL: <strong style="text-transform: capitalize;"><%= activity.uri %></strong>
           </div>
 
           <div class="ar-cname ar-info-line">
@@ -52,7 +52,7 @@
 
     <div class="col-md-12">
       <p class="text-center">
-        <a class="btn btn-primary btn-rounded-primary" style="padding-left:40px;padding-right:40px;" href="/njs-admin/manage/videos/">Back</a>
+        <a class="btn btn-primary btn-rounded-primary" style="padding-left:40px;padding-right:40px;" href="/njs-admin/manage/activities/">Back</a>
       </p>
     </div>
 
