--- a/views/admin/cartItems/edit.ejs
+++ b/views/admin/cartItems/edit.ejs
@@ -209,22 +209,22 @@
   
             <div class="form-group">
                 <label>Applicant/Rep Street</label>
-                <input type="text" class="form-control" value="<%= item.companyStreet %>" name="companyStreet" >
+                <input type="text" class="form-control" value="<%= item.repStreet %>" name="repStreet" >
             </div>
   
             <div class="form-group">
                 <label>Applicant/Rep City</label>
-                <input type="text" class="form-control" value="<%= item.companyCity %>" name="companyCity" >
+                <input type="text" class="form-control" value="<%= item.repCity %>" name="repCity" >
             </div>
   
             <div class="form-group">
                 <label>Applicant/Rep State</label>
-                <input type="text" class="form-control" value="<%= item.companyState %>" name="companyState" >
+                <input type="text" class="form-control" value="<%= item.repState %>" name="repState" >
             </div>
   
             <div class="form-group">
                 <label>Applicant/Rep Postal Code</label>
-                <input type="text" class="form-control" value="<%= item.companyZipCode %>" name="companyZipCode" >
+                <input type="text" class="form-control" value="<%= item.repZipCode %>" name="repZipCode" >
             </div>
   
             <div class="form-group">
