--- a/views/admin/trademark/view.ejs
+++ b/views/admin/trademark/view.ejs
@@ -310,6 +310,19 @@
       </div>
     </div>
 
+    <div class="col-md-12 mt-5">
+      <div class="card mt-3">
+      <h4 class="m-2">Activity Logs</h4>
+      <% if ( trademark.logs && trademark.logs.length > 0 ) { %>
+        <ul class="comment-list m-2">
+          <% trademark.logs.forEach(function(logs,key) { %>
+            <li><span style="font-style:italic; padding-right:10px"><%= moment(logs.created_at_formatted).format('MMM D, YYYY HH:MM') %></span><span style="font-weight: 600;"><%= logs.user %></span></li>
+          <% }) %>
+        </ul>
+        <% } %>
+      </div>
+    </div>
+
     
 
     
